--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -4,7 +4,7 @@
 <div (click)="selectClick();">
 {{selectedColor}} <ng-container *ngIf="result"> {{result}}</ng-container>
 </div>
-<ul *ngIf="showDropDown">
+<ul class="list" *ngIf="showDropDown">
   <input type="text" [(ngModel)]="searchText" (ngModelChange) = "search()">
   <li><input type="checkbox" (click)="selectAll()">Select All</li>
   <li *ngFor="let option of options;let i=index">
