--- a/src/app/select/select.component.scss
+++ b/src/app/select/select.component.scss
@@ -1,6 +1,14 @@
+.list {
+    li{
+        list-style-type:none;
+    }
+} 
 .drop-down-button{
     height: 60px;
     background: #fff;
     border: solid 1px black;
     width: 100%;
+}
+.drop-down-container{
+    width: 211px;
 }
