handled search and multiselect dropdown

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,2 @@
-<app-select [options]="colors"></app-select>
+<app-select [options]="colors" [searchable]="true" [multiselect]="false"></app-select>
 <!-- <app-select [options]="components"></app-select> -->
